metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/RA_Some_Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>RA_Some_Risk_Factors__c</fullName>
    <description>Used to capture the risk factors. This field value is synced from Mavenlink through Mavenlink &lt;&gt; Salesforce integration.</description>
    <label>RA Some Risk Factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>