metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/RB_High_Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>RB_High_Risk_Factors__c</fullName>
    <description>Used to capture the high risk factors. This field value is synced from Mavenlink through Mavenlink &lt;&gt; Salesforce integration.</description>
    <label>RB High Risk Factors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No stakeholder evident/stakeholder changed (sponsor level)</fullName>
            </value>
            <value>
                <fullName>No value or use case at all</fullName>
            </value>
            <value>
                <fullName>Disengaged during implementation (missed meetings, low priority, no motivation)</fullName>
            </value>
            <value>
                <fullName>Decrease of scope</fullName>
            </value>
            <value>
                <fullName>Indefinite postponement</fullName>
            </value>
            <value>
                <fullName>Friction in onboarding due to product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>