metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/RC_Implementationstatus_outof_onboarding__c.field-meta.xml
<CustomField>
    <fullName>RC_Implementationstatus_outof_onboarding__c</fullName>
    <description>Used to capture the implementation status. This field value is synced from Mavenlink through Mavenlink &lt;&gt; Salesforce integration.</description>
    <label>RC Implementationstatus outof onboarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High risk</fullName>
            </value>
            <value>
                <fullName>No risk</fullName>
            </value>
            <value>
                <fullName>Some risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>