metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/RD_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>RD_Opportunities__c</fullName>
    <description>Used to capture the modules in the implementation. This field value is synced from Mavenlink through Mavenlink &lt;&gt; Salesforce integration.</description>
    <label>RD Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>