metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Reason_for_Missed_MVP_Goal_Date__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Missed_MVP_Goal_Date__c</fullName>
    <description>BO-1006. Indicates the reason why estimated MVP date was missed. Synced from Mavenlink.</description>
    <label>Reason for Missed MVP Goal Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slower Moving Implementation, General</fullName>
            </value>
            <value>
                <fullName>Complex Use Case - Extra Consultation</fullName>
            </value>
            <value>
                <fullName>Customer Not Prepared to Begin Engagement Period</fullName>
            </value>
            <value>
                <fullName>Lack of Customer Engagement, Canceled Meetings</fullName>
            </value>
            <value>
                <fullName>Lack of Product Functionality</fullName>
            </value>
            <value>
                <fullName>Misalignment with Package &amp; Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>