metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/refresh__c.field-meta.xml
<CustomField>
    <fullName>refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>refresh</label>
    <type>Checkbox</type>
</CustomField>