metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Reserved_Module_s_Consultation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Module_s_Consultation_Notes__c</fullName>
    <description>BO-1299 : Used for mapping mavenlink project information from Mavenlink</description>
    <label>Reserved Module(s) Consultation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>