metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Revenue_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognized__c</fullName>
    <description>Revenue recognized this month (delta time Contracted One Off)</description>
    <formula>Delta_Milestone_weight_complete__c * Contracted_One_off__c</formula>
    <inlineHelpText>Revenue recognized this month based on this month&apos;s delta.</inlineHelpText>
    <label>Revenue Recognized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>