metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Revenue_Recognized_Total__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognized_Total__c</fullName>
    <description>If a project is archived, indicates recognized revenue equal to contracted one-off. Otherwise, multiplies Milestone weight % complete by Contracted One-off.</description>
    <formula>IF(mavenlink__Archived__c = True, 1 * Contracted_One_off__c, Milestone_weight_complete__c * Contracted_One_off__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Recognized - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>