metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Sign_off_Status__c.field-meta.xml
<CustomField>
    <fullName>Sign_off_Status__c</fullName>
    <description>Indicates whether the implementation of the project is on track, made, or missed sign off goal date.</description>
    <formula>IF(OR(
Goal_Sign_off_Date__c &gt;= PROJECT_SIGN_OFF_DATE__c, 
AND(ISBLANK(PROJECT_SIGN_OFF_DATE__c), Goal_Sign_off_Date__c - TODAY()  &gt; 21)), &quot;On track&quot;, 

IF(AND(
ISBLANK(PROJECT_SIGN_OFF_DATE__c), Goal_Sign_off_Date__c - TODAY() &lt;= 21, Goal_Sign_off_Date__c - TODAY() &gt;= 0), &quot;Approaching due&quot;,

IF(OR(
Goal_Sign_off_Date__c &lt; PROJECT_SIGN_OFF_DATE__c, 
AND(ISBLANK(PROJECT_SIGN_OFF_DATE__c), Goal_Sign_off_Date__c - TODAY() &lt; 0)), &quot;Past Goal&quot;, &quot;N/A&quot;)))</formula>
    <inlineHelpText>Indicates whether the implementation of the project is on track, made, or missed sign off goal date.</inlineHelpText>
    <label>Sign off Status</label>
    <type>Text</type>
</CustomField>