metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/solution_owner__c.field-meta.xml
<CustomField>
    <fullName>solution_owner__c</fullName>
    <formula>mavenlink__Opportunity__r.Solution_Owner__r.FirstName &amp;&quot; &quot; &amp;  mavenlink__Opportunity__r.Solution_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution owner</label>
    <type>Text</type>
</CustomField>