metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Squad__c.field-meta.xml
<CustomField>
    <fullName>Squad__c</fullName>
    <formula>&quot;n/a&quot;</formula>
    <label>Squad</label>
    <type>Text</type>
</CustomField>