metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <description>The contracting Bynder entity for the associated account.</description>
    <formula>/*Subsidiary is a lookup field, so requires a CASE or IF formula to show actual value*/

mavenlink__Account__r.Subsidiary_lookup__r.Name</formula>
    <inlineHelpText>The contracting Bynder entity for the associated account.</inlineHelpText>
    <label>Subsidiary</label>
    <type>Text</type>
</CustomField>