metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/TEST_FIELD__c.field-meta.xml
<CustomField>
    <fullName>TEST_FIELD__c</fullName>
    <description>Test field to check sync between picklist Mavenlink field and string Salesforce field.</description>
    <label>TEST FIELD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>