metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Time_to_value__c.field-meta.xml
<CustomField>
    <fullName>Time_to_value__c</fullName>
    <formula>MVP_DATE__c - KICK_OFF_DATE__c</formula>
    <label>Time to Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>