metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Time_to_value_goal_result__c.field-meta.xml
<CustomField>
    <fullName>Time_to_value_goal_result__c</fullName>
    <description>Indicates whether Goal Time to Value was met or not.</description>
    <formula>IF(
Goal_Time_to_Value__c &gt;= MVP_DATE__c, &quot;Goal Met&quot;,
IF(
Goal_Time_to_Value__c &lt; MVP_DATE__c, &quot;Goal Missed&quot;,
null))</formula>
    <label>Time to Value Goal Result</label>
    <type>Text</type>
</CustomField>