metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Time_to_Value_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Value_Status__c</fullName>
    <description>Indicates whether Goal time to Value was met or not</description>
    <formula>IF(
OR(Goal_Time_to_Value__c &gt;= MVP_DATE__c, AND(ISBLANK(MVP_DATE__c), Goal_Time_to_Value__c - TODAY() &gt; 15)), &quot;On track&quot;,
IF(
AND(ISBLANK(MVP_DATE__c), Goal_Time_to_Value__c - TODAY() &lt;= 15, Goal_Time_to_Value__c - TODAY() &gt;= 0), &quot;Approaching due&quot;,
IF(
OR(Goal_Time_to_Value__c &lt; MVP_DATE__c, AND(ISBLANK(MVP_DATE__c), Goal_Time_to_Value__c - TODAY() &lt; 0)), &quot;Past Due&quot;, &quot;N/A&quot;)))</formula>
    <label>Time to Value Status</label>
    <type>Text</type>
</CustomField>