metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Total_of_Revenue_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Revenue_Recognized__c</fullName>
    <label>Total of Revenue Recognized - Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>