metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Undiscounted_One_off__c.field-meta.xml
<CustomField>
    <fullName>Undiscounted_One_off__c</fullName>
    <formula>CASE(mavenlink__Opportunity__r.CurrencyIsoCode,
&quot;USD&quot;, &quot;$&quot;,
&quot;EUR&quot;, &quot;€&quot;,
&quot;GBP&quot;, &quot;£&quot;,
TEXT(mavenlink__Opportunity__r.CurrencyIsoCode))
&amp; TEXT(
  ROUND((mavenlink__Opportunity__r.Discount_Amount_One_off__c + mavenlink__Opportunity__r.One_off_from_Products__c),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Undiscounted One-off</label>
    <type>Text</type>
</CustomField>