metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Use_Case_Why_Bynder__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Why_Bynder__c</fullName>
    <description>Data is taken from Mavenlink; process populates it to the field &quot;Use Case - Why Bynder&quot; on the Account level.</description>
    <label>Use Case - Why Bynder</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>