metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Weeks_in_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Weeks_in_Onboarding__c</fullName>
    <description>BODEV-1006. Indicates the current week of onboarding. Used in reporting.</description>
    <formula>CEILING(Days_in_onboarding__c/7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks in Onboarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>